<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".watchlist.ModifyWatchlist">

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:queryHint="@string/search_stock_prompt">

    </SearchView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7.5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        >

        <Button
            android:id="@+id/aButton"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="15sp"
            android:background="@color/active_signal"
            android:text="@string/authorize_addition"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/rButton"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="18dp"
            android:background="@color/expired_signal"
            android:textColor="@android:color/black"
            android:text="@string/authorize_removal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/aButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7.5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp">

        <TextView
            android:id="@+id/tickerView"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:text="@string/ticker"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:text="@string/price"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tickerView"
            app:layout_constraintTop_toTopOf="@+id/tickerView" />

        <TextView
            android:id="@+id/txtChange"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:text="@string/daily_change"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtPrice"
            app:layout_constraintTop_toTopOf="@+id/txtPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ListView
        android:id="@+id/watchlist"
        android:layout_width="wrap_content"
        android:layout_height="454dp"
        android:layout_margin="7.5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_weight="1"
        android:background="@color/other_message" />

</LinearLayout>